# simple_http_server

./: Cargo.toml  LICENSE  README.md
src/: http_request.rs  main.rs
