[package]
name = "simple_http_server"
version = "0.1.0"
edition = "2021"
description = "A simple multithreaded HTTP file server with gzip support"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0.38"
flate2 = { version = "1.0", features = ["zlib"] }
